--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -105,12 +105,13 @@
                 android:drawablePadding="10dp"
                 android:drawableTint="#4A4A4A"
                 android:hint="Passwod"
+                android:inputType="textPassword"
                 android:textSize="20dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin2"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:text="Login"
