--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#6200EF"
+        android:backgroundTint="#5545D5"
         android:text="REGISTER"
+        android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +104,8 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:text="Login"
+        android:textColor="@color/white"
+        android:background="@drawable/login_btn_bg"
         app:layout_constraintBottom_toBottomOf="@+id/card"
         app:layout_constraintEnd_toEndOf="@+id/card"
         app:layout_constraintStart_toStartOf="@+id/card"
