--- a/app/src/main/res/drawable/login_btn_bg.xml
+++ b/app/src/main/res/drawable/login_btn_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#777777"/>
-    <corners android:topLeftRadius="30dp" android:topRightRadius="30dp"/>
+    <solid android:color="#9A6BED"/>
+    <corners android:radius="20dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
