--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,8 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginStart="40dp"
-        android:backgroundTint="#6200EF"
+        android:backgroundTint="#5545D5"
         android:text="Login"
+        android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +116,8 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:text="Login"
+        android:textColor="@color/white"
+        android:background="@drawable/login_btn_bg"
         app:layout_constraintBottom_toBottomOf="@+id/card2"
         app:layout_constraintEnd_toEndOf="@+id/card2"
         app:layout_constraintStart_toStartOf="@+id/card2"
