--- a/app/src/main/res/drawable/ic_notes.xml
+++ b/app/src/main/res/drawable/ic_notes.xml
@@ -4,24 +4,24 @@
     android:viewportWidth="44"
     android:viewportHeight="44">
   <path
-      android:pathData="M22,38.5C31.1127,38.5 38.5,31.1127 38.5,22C38.5,12.8873 31.1127,5.5 22,5.5C12.8873,5.5 5.5,12.8873 5.5,22C5.5,31.1127 12.8873,38.5 22,38.5Z"
+      android:pathData="M16.5,7.3333V40.3333M11,7.3333H31.1667C32.1391,7.3333 33.0718,7.7196 33.7594,8.4073C34.447,9.0949 34.8333,10.0275 34.8333,11V33C34.8333,33.9725 34.447,34.9051 33.7594,35.5927C33.0718,36.2804 32.1391,36.6667 31.1667,36.6667H11C10.5138,36.6667 10.0475,36.4735 9.7036,36.1297C9.3598,35.7859 9.1667,35.3196 9.1667,34.8333V9.1667C9.1667,8.6804 9.3598,8.2141 9.7036,7.8703C10.0475,7.5265 10.5138,7.3333 11,7.3333V7.3333Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2.75"
       android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
+      android:strokeColor="#2C3E50"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M16.5,22H27.5"
+      android:pathData="M23.8333,14.6667H27.5"
       android:strokeLineJoin="round"
       android:strokeWidth="2.75"
       android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
+      android:strokeColor="#2C3E50"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M22,16.5V27.5"
+      android:pathData="M23.8333,22H27.5"
       android:strokeLineJoin="round"
       android:strokeWidth="2.75"
       android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
+      android:strokeColor="#2C3E50"
       android:strokeLineCap="round"/>
 </vector>
