--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,36 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_menu_bg"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
-            android:id="@+id/diary_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/calendar_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="48dp"
             android:background="@drawable/ic_calendar"
-            android:backgroundTint="#E1E1E1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/notes_button"
+            android:id="@+id/addNotesBtn"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="@drawable/ic_add"
-            android:backgroundTint="#FFDD00"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/settings_button"
-            app:layout_constraintStart_toEndOf="@id/diary_button"
+            app:layout_constraintEnd_toStartOf="@id/diary_button"
+            app:layout_constraintStart_toEndOf="@id/calendar_button"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/settings_button"
+            android:id="@+id/diary_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="48dp"
-            android:background="@drawable/ic_settings"
+            android:background="@drawable/ic_notes"
             android:backgroundTint="#E1E1E1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,5 +58,28 @@
         android:layout_marginTop="20dp"
         />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/notesBg"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Notes"
+            app:layout_constraintTop_toTopOf="@id/notesBg"
+            app:layout_constraintStart_toStartOf="@id/notesBg"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="30dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
