--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,27 +9,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:text="REGISTER"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uiReg" />
+        app:layout_constraintTop_toTopOf="@id/bgLeft" />
 
     <Button
         android:id="@+id/logBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="40dp"
-        android:backgroundTint="#5545D5"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="50dp"
+        android:background="@android:color/transparent"
         android:text="Login"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uiReg" />
+        app:layout_constraintStart_toStartOf="@id/bgLeft"
+        app:layout_constraintTop_toTopOf="@id/bgLeft" />
 
     <TextView
         android:id="@+id/uiReg"
