--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/passIn"
+                android:id="@+id/passwordIn"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -93,7 +93,7 @@
                 android:drawableStart="@drawable/ic_lock"
                 android:drawablePadding="10dp"
                 android:drawableTint="#4A4A4A"
-                android:hint="Passwod"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:textSize="20dp" />
         </LinearLayout>
