--- a/app/src/main/res/drawable/bg_right.xml
+++ b/app/src/main/res/drawable/bg_right.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:startColor="@color/purple_200"
-        android:centerColor="@color/purple_500"
-        android:endColor="@color/purple_700"
-        android:angle="90"
-        />
-
     <corners
         android:bottomLeftRadius="30dp"
         android:topLeftRadius="30dp"
         />
 
+    <gradient
+        android:startColor="#8800FF"
+        android:centerColor="#FF00FB"
+        android:endColor="#FF00DD"
+        android:angle="90"
+        />
 </shape>
