--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:background="#252443">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_menu"
@@ -49,6 +50,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <CalendarView
+        android:background="@color/gray"
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Notes"
+            android:textColor="#FFFFFF"
             app:layout_constraintTop_toTopOf="@id/notesBg"
             app:layout_constraintStart_toStartOf="@id/notesBg"
             android:layout_marginTop="30dp"
@@ -85,6 +88,7 @@
             android:id="@+id/resultNotes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/gray"
             app:layout_constraintTop_toBottomOf="@id/textNotes"
             android:layout_marginTop="20dp"/>
 
