--- a/app/src/main/res/layout/add_notes.xml
+++ b/app/src/main/res/layout/add_notes.xml
@@ -30,6 +30,7 @@
         android:text="Текст"
         android:textSize="25sp"
         android:layout_marginTop="30dp"
+        android:layout_marginStart="16dp"
         />
 
     <EditText
@@ -37,8 +38,7 @@
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        />
+        android:layout_marginTop="30dp" />
 
     <Button
         android:id="@+id/add"
@@ -46,7 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:text="Добавить"/>
+        android:text="Добавить"
+        android:layout_marginBottom="16dp"/>
 
 
 </LinearLayout>
