--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,27 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="44dp"
-    android:height="44dp"
-    android:viewportWidth="44"
-    android:viewportHeight="44">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M22,38.5C31.1127,38.5 38.5,31.1127 38.5,22C38.5,12.8873 31.1127,5.5 22,5.5C12.8873,5.5 5.5,12.8873 5.5,22C5.5,31.1127 12.8873,38.5 22,38.5Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2.75"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M16.5,22H27.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2.75"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M22,16.5V27.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2.75"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFB800"
-      android:strokeLineCap="round"/>
+      android:fillColor="#FF6600"
+      android:pathData="M18,13h-5v5c0,0.55 -0.45,1 -1,1s-1,-0.45 -1,-1v-5H6c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h5V6c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v5h5c0.55,0 1,0.45 1,1s-0.45,1 -1,1z"/>
 </vector>
