--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,15 +8,14 @@
     android:background="#131322">
 
     <CalendarView
-        android:background="@color/gray"
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/notesBg"
@@ -66,10 +65,10 @@
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
+            android:backgroundTint="#06060B"
             android:layout_gravity="bottom"
             app:fabCradleMargin="8dp"
-            app:fabCradleRoundedCornerRadius="8dp"/>
+            app:fabCradleRoundedCornerRadius="20dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -81,5 +80,25 @@
             app:layout_anchor="@id/bottomAppBar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_calendar"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_menu"
+        app:layout_constraintStart_toStartOf="@id/bottom_menu"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="70dp"
+        />
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_book"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_menu"
+        app:layout_constraintEnd_toEndOf="@id/bottom_menu"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="70dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
