added recyclerView to notes

--- a/app/src/main/res/drawable/bg_alert.xml
+++ b/app/src/main/res/drawable/bg_alert.xml
@@ -5,6 +5,9 @@
         />
 
     <solid
-        android:color="#B300FF"
+        android:color="#0B0C12"
         />
+
+    <stroke android:color="#B300FF"
+        android:width="3dp"/>
 </shape>
