--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -28,6 +28,8 @@
         android:layout_marginEnd="30dp"
         android:background="@android:color/transparent"
         android:text="REGISTER"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -74,7 +76,7 @@
                 android:hint="Login"
                 android:textColorHint="#4C4C4C"
                 android:textColor="#FF4C4C4C"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/passwordIn"
