--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/calendar"
-        android:title="Мой календарик"
+        android:title=""
         android:icon="@drawable/ic_calendar"
         app:showAsAction="ifRoom"/>
 
@@ -12,7 +12,7 @@
         android:enabled="false"/>
 
     <item android:id="@+id/book"
-        android:title="Мои мысли"
+        android:title=""
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_book"/>
 </menu>
